# production-control-fastapi

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test_db.py
alembic/: env.py
alembic/versions/: a28df49cc2a7_initial_migration.py
src/: celery_app.py  main.py
src/api/: deps.py  router.py
src/api/v1/: __init__.py  batches.py  products.py  storage.py  webhooks.py  work_centers.py
src/core/: config.py  logging.py
src/db/: base.py  session.py
src/models/: __init__.py  batch.py  mixins.py  product.py  webhook.py  work_center.py
src/repositories/: __init__.py  base_repository.py  batch_repository.py  product_repository.py  work_center_repository.py
src/schemas/: __init__.py  analytics.py  batch.py  product.py  task.py  webhook.py  work_center.py
src/storage/: __init__.py  minio_service.py
src/tasks/: __init__.py  aggregation.py  import_export.py  reports.py  webhooks.py
tests/: conftest.py
tests/integration/: test_batch_flow.py
tests/unit/: test_batches.py  test_health.py
