[tool.poetry]
name = "production-control-fastapi"
version = "0.1.0"
description = "Система контроля заданий на выпуск продукции"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
celery = {extras = ["redis", "auth"], version = "^5.3.6"}
redis = "^5.0.1"
pika = "^1.3.2"
minio = "^7.2.3"
loguru = "^0.7.2"
python-multipart = "^0.0.6"
httpx = "^0.27.0"
itsdangerous = "^2.1.2"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
xlsxwriter = "^3.1.9"
reportlab = "^4.0.9"
aiocache = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
black = "^23.12.1"
mypy = "^1.8.0"
bandit = "^1.7.6"
pre-commit = "^3.6.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# --- Linters & Formatters ---

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"src/api/**/*.py" = ["B008"]
"src/models/*.py" = ["F821"]
"src/schemas/*.py" = ["F821"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# --- Testing ---

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"